<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2021 A M Satrio
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutGeneral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButtonDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_darkmode"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/buttonDarkTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/switch09"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchAZSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/switchAZSmall"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchAZBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/switchAZBig"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchCustom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchCustom1"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchCustom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchCustom2"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchCustom3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchCustom3"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switchExtendedASCII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_extended_ascii"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/editTextTextYourCustomChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextTextYourCustomChar"
            android:inputType="textPersonName"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextNumberCountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextNumberCountPassword"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonGenerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonGenerate" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:longClickable="true"
                android:scrollbars="vertical"
                android:text="@string/textViewResult"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewGaugePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewGaugePassword" />

        <ProgressBar
            android:id="@+id/progressBarGaugePassword"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100" />

        <Button
            android:id="@+id/buttonCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCopy" />
    </LinearLayout>

</LinearLayout>